automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "names_and_ranks = []\n",
     "i = 1\n",
-    "while i < l\n",
+    "while i < len(city_names)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
