automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "while i < len(city_names):\n",
     "    names_and_ranks[i-1] = i + \". \" + city_Names[i-1]\n",
     "    i = i + 1\n",
-    "print()\n",
+    "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
