--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "names_and_ranks = []\n",
     "i = 1\n",
     "while i < len(city_names):\n",
-    "    names_and_ranks[i-1] = i + \". \" + city_Names[i-1]\n",
+    "    names_and_ranks[i-1] = i + \". \" + city_names[i-1]\n",
     "    i = i + 1\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
