automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,9 @@
     " 'Walla Walla Valley',\n",
     " 'Salina Island',\n",
     " 'Solta',\n",
-    " 'Iguazu Falls']"
+    " 'Iguazu Falls']\n",
+    "\n",
+    "str(i) + \". \" + city_names[i-1]"
    ]
   },
   {
