automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
     " 'Solta',\n",
     " 'Iguazu Falls']\n",
     "\n",
-    "str(i) + \". \" + city_names[i-1]"
+    "str(1) + \". \" + city_names[0]"
    ]
   },
   {
