--- a/index.ipynb
+++ b/index.ipynb
@@ -193,9 +193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1. Buenos Aires'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_names = ['Buenos Aires',\n",
     " 'Toronto',\n",
