automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
     " 'Solta',\n",
     " 'Iguazu Falls']\n",
     "\n",
-    "str(1) + \". \" + city_names[0]"
+    "temp_vastr(1) + \". \" + city_names[0]"
    ]
   },
   {
