automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,8 @@
     " 'Solta',\n",
     " 'Iguazu Falls']\n",
     "\n",
-    "temp_vastr(1) + \". \" + city_names[0]"
+    "temp_var = str(1) + \". \" + city_names[0]\n",
+    "temp_var"
    ]
   },
   {
