--- a/index.ipynb
+++ b/index.ipynb
@@ -221,8 +221,9 @@
     " 'Solta',\n",
     " 'Iguazu Falls']\n",
     "\n",
-    "temp_var = str(1) + \". \" + city_names[0]\n",
-    "temp_var"
+    "\n",
+    "temp_var2 = str(1) + \". \" + city_names[0]\n",
+    "temp_var2"
    ]
   },
   {
