automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
     " 'Solta',\n",
     " 'Iguazu Falls']\n",
     "\n",
-    "\n",
+    "temp_var2 = ]\n",
     "temp_var2 = str(1) + \". \" + city_names[0]\n",
     "temp_var2"
    ]
