--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "'1. Buenos Aires'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
     " 'Solta',\n",
     " 'Iguazu Falls']\n",
     "\n",
-    "temp_var2 = ]\n",
+    "temp_var2 = []\n",
     "temp_var2 = str(1) + \". \" + city_names[0]\n",
     "temp_var2"
    ]
