--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
     "\n",
     "temp_var2 = []\n",
     "temp_var2 = str(1) + \". \" + city_names[0]\n",
-    "temp_var2"
+    "temp_var2[0]"
    ]
   },
   {
