--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
     " 'Iguazu Falls']\n",
     "\n",
     "temp_var2 = []\n",
-    "p\n",
+    "print(temp_var2)\n",
     "temp_var2 = str(1) + \". \" + city_names[0]\n",
     "temp_var2[0]"
    ]
