--- a/index.ipynb
+++ b/index.ipynb
@@ -224,6 +224,7 @@
     "temp_var2 = []\n",
     "print(temp_var2)\n",
     "temp_var2 = str(1) + \". \" + city_names[0]\n",
+    "print(temp_)\n",
     "temp_var2[0]"
    ]
   },
