automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "temp_var2 = str(1) + \". \" + city_names[0]\n",
     "print(temp_var2)\n",
     "temp_var2[0]\n",
-    "print(temp_v)"
+    "print(temp_var2)\n"
    ]
   },
   {
