--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,8 @@
     "temp_var2 = str(1) + \". \" + city_names[0]\n",
     "print(temp_var2)\n",
     "temp_var2[0]\n",
-    "print(temp_var2)\n"
+    "print(temp_var2)\n",
+    "print(temp_var20)"
    ]
   },
   {
