automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "print(temp_var2)\n",
     "temp_var2[0]\n",
     "print(temp_var2)\n",
-    "print(temp_var20)"
+    "print(temp_var2[0])"
    ]
   },
   {
