--- a/index.ipynb
+++ b/index.ipynb
@@ -193,18 +193,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'1'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "1. Buenos Aires\n",
+      "1. Buenos Aires\n",
+      "1\n"
+     ]
     }
    ],
    "source": [
