--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,7 @@
    "source": [
     "names_and_ranks = []\n",
     "i = 1\n",
-    "while i < len(city_names):\n",
+    "while i < len(city_names) + 1:\n",
     "    names_and_ranks.append(str(i) + \". \" + city_names[i-1])\n",
     "    i = i + 1\n",
     "print(names_and_ranks)\n",
