automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,7 @@
    ],
    "source": [
     "names_and_ranks = []\n",
-    "\n",
+    "print(len(city))\n",
     "i = 1\n",
     "while i < len(city_names) + 1:\n",
     "    names_and_ranks.append(str(i) + \". \" + city_names[i-1])\n",
