--- a/index.ipynb
+++ b/index.ipynb
@@ -239,20 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "12\n",
       "['1. Buenos Aires', '2. Toronto', '3. Pyeongchang', '4. Marakesh', '5. Albuquerque', '6. Los Cabos', '7. Greenville', '8. Archipelago Sea', '9. Walla Walla Valley', '10. Salina Island', '11. Solta', '12. Iguazu Falls']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = []\n",
-    "print(len(city))\n",
+    "print(len(city_names))\n",
     "i = 1\n",
     "while i < len(city_names) + 1:\n",
     "    names_and_ranks.append(str(i) + \". \" + city_names[i-1])\n",
