automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
    },
    "outputs": [],
    "source": [
-    "city_populations[0] # 2891000\n",
+    "for icity_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
     "city_populations[-1] # 0"
    ]
