--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,8 @@
    },
    "outputs": [],
    "source": [
-    "for i = city_populations[0] # 2891000\n",
+    "for i = 1 to 3:\n",
+    "    city_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
     "city_populations[-1] # 0"
    ]
