automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
    "outputs": [],
    "source": [
     "for i = 1 to 3:\n",
-    "    city_populations[0] # 2891000\n",
+    "    city_populations[i-1] # 2891000\n",
     "city_populations[1] # 2800000\n",
     "city_populations[-1] # 0"
    ]
