automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -309,9 +309,7 @@
    "source": [
     "for i = 1 to 3:\n",
     "    city_population[i-1] = cities[i-1][Populations] # 2891000\n",
-    "print(city_populationn)\n",
-    "city_populations[1] # 2800000\n",
-    "city_populations[-1] # 0"
+    "print(city_populationn)\n"
    ]
   },
   {
