automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -314,7 +314,7 @@
     }
    ],
    "source": [
-    "for i = 1 to 3:\n",
+    "for i in [:\n",
     "    city_population[i-1] = cities[i-1][Populations] # 2891000\n",
     "print(city_populationn)\n"
    ]
