--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,8 @@
     }
    ],
    "source": [
-    "city_popufor i in [0, 1, 2]:\n",
+    "city_population = []\n",
+    "for i in [0, 1, 2]:\n",
     "    city_population[i] = cities[i]['Population'] # 2891000\n",
     "print(city_population)\n"
    ]
