--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
    "source": [
     "city_population = []\n",
     "for i in [0, 1, 2]:\n",
-    "    city_population[i] = cities[i]['Population'] # 2891000\n",
+    "    city_population.append() = cities[i]['Population'] # 2891000\n",
     "print(city_population)\n"
    ]
   },
