automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,7 +359,7 @@
    "source": [
     "city_population = []\n",
     "for i in [0, 1, 2]:\n",
-    "    city_population.append(cities[i]['Population']) # 2891000\n",
+    "    city_population.append(cities[i]['Population'])\n",
     "print(city_population)\n"
    ]
   },
