automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -357,10 +357,10 @@
     }
    ],
    "source": [
-    "city_population = []\n",
+    "city_populations = []\n",
     "for i in [0, 1, 2]:\n",
-    "    city_population.append(cities[i]['Population'])\n",
-    "print(city_population)\n"
+    "    city_populations.append(cities[i]['Population'])\n",
+    "print(city_populations)\n"
    ]
   },
   {
