automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for i in [0, 1, 2]:\n",
+    "    city_populations.append(cities[i]['Population'])\n",
+    "print(city_populations)"
    ]
   },
   {
