automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -476,7 +476,7 @@
    "source": [
     "city_areas = []\n",
     "for i in [0, 1, 2]:\n",
-    "    city_populations.append(cities[i]['Population'])\n",
+    "    city_areas.append(cities[i]['Area'])\n",
     "print(city_populations)"
    ]
   },
