automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -470,19 +470,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4758, 2731, 3194]\n"
+     ]
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "for i in [0, 1, 2]:\n",
     "    city_areas.append(cities[i]['Area'])\n",
-    "print(city_populations)"
+    "print(city_areas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
